Scrollbar fix didn't work

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,3 @@
 .selected {
   font-weight: bold;
 }
-
-body {
-  overflow: hidden; /* Hide scrollbars */
-}
